3-Voting-App-Manifest/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voteapp
  labels:
    name: voteapp
