3-Voting-App-Manifest/11-vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: voteapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - name: vote
        image: dockersamples/examplevotingapp_vote:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "512Mi"  # Minimum memory required
            cpu: "250m"      # Minimum CPU required
