3-Voting-App-Manifest/13-work-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: voteapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: dockersamples/examplevotingapp_worker:latest
        resources:
          requests:
            memory: "64Mi"  # Minimum memory required
            cpu: "100m"      # Minimum CPU required
