3-Voting-App-Manifest/14-result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: voteapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image: dockersamples/examplevotingapp_result:latest
        ports:
        - containerPort: 80  # Container port
        resources:
          requests:
            memory: "64Mi"  # Minimum memory required
            cpu: "100m"      # Minimum CPU required
