3-Voting-App-Manifest/10-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: voteapp
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
