3-Voting-App-Manifest/12-vote-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-svc
  namespace: voteapp
spec:
  selector:
    app: vote
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
