3-Voting-App-Manifest/15-result-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-svc
  namespace: voteapp
spec:
  selector:
    app: result
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
