3-Voting-App-Manifest/7-redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis # name must be redis
  namespace: voteapp
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
