3-Voting-App-Manifest/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voteapp-ing
  namespace: voteapp
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
  - host: vote.shananatestingdevops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
  - host: result.shananatestingdevops.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
